[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "csort"
authors = [
	{ name = "Isaac Kitchen-Smith", email = "isaacks123@gmail.com" },
]
readme = "README.md"
classifiers = [
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Typing :: Typed"

]
keywords = ["csort"]
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = ["ast_comments==1.2.2", "astor==0.8.1", "libcst==1.3.1", "toml==0.10.2"]

[project.optional-dependencies]
dev = [
	"black==24.3.0",
	"coverage==6.5.0",
	"mypy==1.9.0",
	"pre-commit==3.7.0",
	"pytest==8.1.2",
	"pytest-cov==5.0.0",
	"validate-pyproject[all]",
]

[tool.pytest.ini_options]
pythonpath = "./src"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
##env = ["PYTHONHASHSEED=0"]

[tool.mypy]
mypy_path = "src"
files = "src/csort"
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
install_types = true
non_interactive = true

explicit_package_bases = true
disallow_untyped_calls = false
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = false
no_implicit_optional = true
strict_optional = true
exclude = ['tests/', 'build/']

[tool.isort]
profile = "black"
py_version = "auto"
line_length = 120

[tool.black]
line-length = 120

[tool.csort.order]
dunder_method = 3
csort_group = 4
class_method = 5
private_method = 12

[tool.csort]
use_csort_group = true
auto_static = false

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.15
    env_list =
        py311
        py310
        py39
        type

	[testenv:py39]
	basepython = python3.9
	deps =
		py39: -r requirements.txt
	commands =
		pytest tests

	[testenv:py310]
	basepython = python3.10
	deps =
		py310: -r requirements.txt
	commands =
		pytest tests

	[testenv:py311]
	basepython = python3.11
	deps =
		py311: -r requirements.txt
	commands =
		pytest tests

	[testenv:py312]
	basepython = python3.12
	deps =
		py312: -r requirements.txt
	commands = pytest tests

	[testenv:type]
    deps =
    	mypy
    	types-toml
    commands = mypy src
"""

[tool.setuptools]
packages = ["csort"]
